tests/fixtures/negative/style/ExpressionBodySyntax.kt
package style

fun meaningOfLife() = 42

fun greet(name: String) = "Hello, $name"

fun compute(x: Int): Int {
    val result = x * 2
    return result
}
